--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,16 @@ body {
 #results {
     display: flex;
     justify-content: center;
-    margin: 40px;
+    margin: 50px;
 }
 
 #scores {
     display: flex;
     justify-content: center;
     gap: 50px;
+}
+
+#winnerScreen {
+    display: none;
+    justify-content: center;
 }
